<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>


    <item
        android:id="@+id/action_ratings"
        android:orderInCategory="200"
        android:title="@string/action_ratings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_update"
        android:orderInCategory="300"
        android:title="@string/action_update"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_more"
        android:orderInCategory="400"
        android:title="@string/action_more"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_close"
        android:orderInCategory="500"
        android:title="@string/action_close"
        app:showAsAction="never"/>
</menu>
