<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nu_admission">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="5sp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/nu_all_AdmissionResult"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40sp"
                android:paddingRight="40sp">

                <Button
                    android:id="@+id/nu_honours_AdmissionResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="serif"
                    android:onClick="nu_honours_AdmissionResult"
                    android:padding="5sp"

                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"

                    android:text="@string/nu_honours_AdmissionResult"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/degree_admission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="serif"
                    android:onClick="degree_admission"
                    android:padding="5sp"

                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"

                    android:text="@string/degree_admission"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/masters_Regular"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="serif"
                    android:onClick="masters_Regular"
                    android:padding="5sp"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/masters_Regular"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
                android:textSize="20sp" />

                <Button
                    android:id="@+id/masters_preliminary"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="serif"
                    android:onClick="masters_preliminary"
                    android:padding="5sp"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"

                    android:text="@string/masters_preliminary"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/masters_pro"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="serif"
                    android:onClick="masters_professional"
                    android:padding="5sp"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"

                    android:text="@string/masters_pro"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />




            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />



</RelativeLayout>